Mais melhoria estética pra eu me concentrar no que importa

--- a/Unico teste real da internet/client/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/client/quizMenu/quizMenu.html
@@ -5,12 +5,12 @@
             <section class="quizBox" ng-repeat="quiz in quizzes track by $index">
                 <div>
                     <p class="quiztitle textBox"> <a ng-href="/#!/quiz/{{quiz.id_quiz}}"> {{quiz.titulo}}      </a></p>
-                    <div class="foto"><a ng-href="/#!/quiz/{{quiz.id_quiz}}"><img ng-src="{{quiz.foto}}"></a></div>
-                    <p class="resumo"> {{quiz.resumo}} </p>
+                    <div class="foto"><a ng-href="/#!/quiz/{{quiz.id_quiz}}"><img ng-src="{{quiz.url_foto}}"></a></div>
+                    <p ng-if="quiz.id_modalidade=='1'" class = "modalidade textBox"> <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: Rankeado </p>
+                    <p ng-if="quiz.id_modalidade=='2'" class = "modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: Genérico </p>
+                    <p ng-if="quiz.id_modalidade=='3'" class = "modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: Pessoal </p>
                 </div>
-                <p ng-if="quiz.modalidade==='generica'" class="modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-                <p ng-if="quiz.modalidade==='pessoal'" class="modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-                <p ng-if="quiz.modalidade==='pontuacao'" class="modalidade textBox"> <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+                <p class = "resumo textBox"> {{quiz.resumo}} </p>                 
                 <p class="autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
                 <p class="tags">
                     <a ng-repeat="tags in quiz.tags" ng-href="/#!/tag/{{tags}}" class="link">
