--- a/Unico teste real da internet/client/home/home.html
+++ b/Unico teste real da internet/client/home/home.html
@@ -15,7 +15,7 @@
                 <p ng-if="quiz.id_modalidade=='2'" class = "modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: Genérico </p>
                 <p ng-if="quiz.id_modalidade=='3'" class = "modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: Pessoal </p>
                 <p class = "resumo textBox"> {{quiz.resumo}} </p> 
-                <p class = "autor textBox"> Por: <a ng-href = "/#!/perfil/{{quiz.autor.id}}"> {{quiz.autor.nome}} </a> </p>
+                <p class="autor"> Por: <a ng-href="/#!/perfil/{{quiz.autor.id_usuario}}">{{quiz.autor.nome}}</a> </p>
                 <p class = "tags textBox"> 
                     <a ng-repeat="tags in quiz.tags track by $index" ng-href="/#!/tag/{{tags}}" class = "link">
                         <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
