--- a/Unico teste real da internet/client/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/client/quizMenu/quizMenu.html
@@ -11,7 +11,7 @@
                     <p ng-if="quiz.id_modalidade=='3'" class = "modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: Pessoal </p>
                 </div>
                 <p class = "resumo textBox"> {{quiz.resumo}} </p>                 
-                <p class="autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
+                <p class="autor"> Por: <a ng-href="/#!/perfil/{{quiz.autor.id_usuario}}">{{quiz.autor.nome}}</a> </p>
                 <p class="tags">
                     <a ng-repeat="tags in quiz.tags" ng-href="/#!/tag/{{tags}}" class="link">
                         <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
