--- a/Unico teste real da internet/client/search/search.html
+++ b/Unico teste real da internet/client/search/search.html
@@ -1,16 +1,16 @@
 <div class="page-div">
     <h3 class="title">Resultados da sua busca (PAG {{nPagina}}):</h3>
     <div class="quizzes">
-        <section class="quizBox" ng-repeat="quiz in resultado track by $index">
+        <section class="quizBox" ng-repeat="quiz in quizzes track by $index">
             <div>
                 <p class="quiztitle textBox"> <a ng-href="/#!/quiz/{{quiz.id_quiz}}"> {{quiz.titulo}}      </a></p>
                 <div class="foto"><a ng-href="/#!/quiz/{{quiz.id_quiz}}"><img ng-src="{{quiz.foto}}"></a></div>
-                <p class="resumo"> {{quiz.resumo}} </p>
+                <p ng-if="quiz.id_modalidade=='1'" class = "modalidade textBox"> <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: Rankeado </p>
+                <p ng-if="quiz.id_modalidade=='2'" class = "modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: Genérico </p>
+                <p ng-if="quiz.id_modalidade=='3'" class = "modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: Pessoal </p>
             </div>
-            <p ng-if="quiz.modalidade==='generica'" class="modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-            <p ng-if="quiz.modalidade==='pessoal'" class="modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-            <p ng-if="quiz.modalidade==='pontuacao'" class="modalidade textBox"> <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-            <p class="autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
+            <p class="resumo"> {{quiz.resumo}} </p>
+            <p class="autor"> Por: <a ng-href="/#!/perfil/{{quiz.autor.id_usuario}}">{{quiz.autor.nome}}</a> </p>
             <p class="tags">
                 <a ng-repeat="tags in quiz.tags" ng-href="/#!/tag/{{tags}}" class="link">
                     <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
