Quantidade absurda de alterações, ler descrição.
Tudo em um commit por se tratar da mesma coisa, basicamente:
Implementado Controller As no lugar de dependencia do $scope na criação de quizzes (melhor para mexer com formulários, e é uma prática em geral mais decente)
revamp geral no css das páginas home e de criação do quiz (o último ainda falta a parte 3 e melhorar um pouco a parte 2)

--- a/Unico teste real da internet/client/criacaoQuiz/criacaoQuiz.html
+++ b/Unico teste real da internet/client/criacaoQuiz/criacaoQuiz.html
@@ -1,7 +1,7 @@
-<form novalidate ng-submit='criarPergunta()' name=perguntaForm>
+<ng-form novalidate name=createCtrl.form>
 
-    <div class = "questions">        
-        <criar-quiz parte="{{parteQuiz}}"></criar-quiz>    
-    </div> 
+    <div class="questions">
+        <criar-quiz parte="{{createCtrl.parteQuiz}}"></criar-quiz>
+    </div>
 
-</form>
+</ng-form>
