--- a/Unico teste real da internet/client/criacaoQuiz/parte2.html
+++ b/Unico teste real da internet/client/criacaoQuiz/parte2.html
@@ -2,89 +2,106 @@
     <div class="pergunta">
         <label>
             Pergunta:
-            <input type="text" class="rounded-input" ng-maxlength="100" name="pergunta" placeholder="Quanto é 1 + 1?" required ng-minlength="10" ng-model="pergunta.pergunta">
-            <small ng-show="perguntaForm.pergunta.$error.minlength">No minimo 10 caracteres<br/></small>
-            <small ng-show="perguntaForm.pergunta.$error.maxlength">No máximo 100 caracteres<br/></small>
-            <small ng-show="perguntaForm.pergunta.$error.required && perguntaForm.pergunta.$touched">Preencha o campo<br/></small>            
-        </label>        
+            <input type="text" class="rounded-input" ng-maxlength="100" name="pergunta" placeholder="Quanto é 1 + 1?" required ng-minlength="10"
+                ng-model="createCtrl.form.perguntaTemp.perguntaTemp">
+            <small ng-show="perguntaForm.perguntaTemp.$error.minlength">No minimo 10 caracteres
+                <br/>
+            </small>
+            <small ng-show="perguntaForm.perguntaTemp.$error.maxlength">No máximo 100 caracteres
+                <br/>
+            </small>
+            <small ng-show="perguntaForm.perguntaTemp.$error.required && perguntaForm.perguntaTemp.$touched">Preencha o campo
+                <br/>
+            </small>
+        </label>
     </div>
-    <div class="quiz-info" ng-if="modalidadePontuacao()">
-        <!-- respostas pontuação -->        
-        <h4>Respostas: (mínimo 2) {{quiz.tags}}</h4>
-        <section class="resposta-input-wrapper">            
+    <div class="quiz-info" ng-if="createCtrl.modalidadePontuacao()">
+        <!-- respostas pontuação -->
+        <h4>Respostas: (mínimo 2)</h4>
+        <section class="resposta-input-wrapper">
             <small class="resposta-desc">adicionar resposta:</small>
-            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
-            <button class="resposta-button-inline" ng-click="adicionarResposta(resposta)">Adicionar</button>
+            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="createCtrl.form.respostaInsert"
+                placeholder="Provavelmente 2!" required>
+            <button class="resposta-button-inline" ng-click="createCtrl.adicionarResposta(respostaInsert)">Adicionar</button>
             <small ng-show="perguntaForm.resposta.$error.minlength">No minimo 3 caracteres</small>
-            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres<br/></small>
+            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres
+                <br/>
+            </small>
             <small ng-show="perguntaForm.resposta.$error.required && perguntaForm.resposta.$touched">Preencha o campo</small>
         </section>
         <ul class="quiz-respostas">
-            <div ng-repeat="resposta in pergunta.respostas track by $index" class="resposta-li-wrapper">
-                <li class="list-respostas"> 
+            <div ng-repeat="resposta in createCtrl.form.perguntaTemp.respostas track by $index" class="resposta-li-wrapper">
+                <li class="list-respostas">
                     <p>{{resposta.resposta}}</p>
                 </li>
                 <span>
-                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
+                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i>
                     <label class="labelNota">
                         Nota:
-                        <input required value="0" type="number" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input" max="5" min="0">
+                        <input required value="0" type="number" ng-model="createCtrl.form.perguntaTemp.respostas[$index].nota" class="rounded-input nota-input"
+                            max="5" min="0">
                     </label>
-                    <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
+                    <i class="fa fa-trash link iconeResposta" ng-click="createCtrl.removerResposta($index)"></i>
                 </span>
             </div>
         </ul>
     </div>
-    <div class="quiz-info" ng-if="modalidadeGenerica()">       
+    <div class="quiz-info" ng-if="createCtrl.modalidadeGenerica()">
         <!-- respostas genérica -->
         <h4>Respostas: (mínimo 2)</h4>
-        <section class="resposta-input-wrapper">            
+        <section class="resposta-input-wrapper">
             <small class="resposta-desc">adicionar resposta:</small>
-            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
-            <button class="resposta-button-inline" ng-click="adicionarResposta(resposta)">Adicionar</button>
+            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="createCtrl.form.respostaInsert"
+                placeholder="Provavelmente 2!" required>
+            <button class="resposta-button-inline" ng-click="createCtrl.adicionarResposta(createCtrl.form.respostaInsert)">Adicionar</button>
             <small ng-show="perguntaForm.resposta.$error.minlength">No minimo 3 caracteres</small>
-            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres<br/></small>
+            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres
+                <br/>
+            </small>
             <small ng-show="perguntaForm.resposta.$error.required && perguntaForm.resposta.$touched">Preencha o campo</small>
         </section>
         <ul class="quiz-respostas">
-            <div ng-repeat="resposta in pergunta.respostas track by $index" class="resposta-li-wrapper">
-                <li class="list-respostas"> 
+            <div ng-repeat="resposta in createCtrl.form.perguntaTemp.respostas track by $index" class="resposta-li-wrapper">
+                <li class="list-respostas">
                     <p>{{resposta.resposta}}</p>
                 </li>
                 <span>
-                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
+                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i>
                     <label class="labelNota">
                         Correta?
-                        <input ng-change="alterarRadio($index)" type="radio" required name="resposta" ng-value="1" ng-model="pergunta.respostas[$index].nota">
+                        <input ng-change="createCtrl.alterarRadio($index)" type="radio" required name="resposta" ng-value="1" ng-model="createCtrl.form.perguntaTemp.respostas[$index].nota">
                     </label>
-                    <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
+                    <i class="fa fa-trash link iconeResposta" ng-click="createCtrl.removerResposta($index)"></i>
                 </span>
             </div>
         </ul>
     </div>
-    <div class="quiz-info" ng-if="modalidadePessoal()">
+    <div class="quiz-info" ng-if="createCtrl.modalidadePessoal()">
         <!-- respostas pessoal -->
         <h4>Respostas: (mínimo 2)</h4>
-        <section class="resposta-input-wrapper">            
+        <section class="resposta-input-wrapper">
             <small class="resposta-desc">adicionar resposta:</small>
-            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
-            <button class="resposta-button-inline" ng-click="adicionarResposta(resposta)">Adicionar</button>
+            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="createCtrl.form.respostaInsert"
+                placeholder="Provavelmente 2!" required>
+            <button class="resposta-button-inline" ng-click="createCtrl.adicionarResposta(createCtrl.form.respostaInsert)">Adicionar</button>
             <small ng-show="perguntaForm.resposta.$error.minlength">No minimo 3 caracteres</small>
-            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres<br/></small>
+            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres
+                <br/>
+            </small>
             <small ng-show="perguntaForm.resposta.$error.required && perguntaForm.resposta.$touched">Preencha o campo</small>
         </section>
-         <ul class="quiz-respostas">
-            <div ng-repeat="resposta in pergunta.respostas track by $index" class="resposta-li-wrapper">
-                <li class="list-respostas"> 
+        <ul class="quiz-respostas">
+            <div ng-repeat="resposta in createCtrl.form.perguntaTemp.respostas track by $index" class="resposta-li-wrapper">
+                <li class="list-respostas">
                     <p>{{resposta.resposta}}</p>
                 </li>
                 <span>
-                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
+                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i>
                     <label class="labelNota">
                         Correta?
-                        <input ng-change="alterarRadio($index)" type="radio" required name="resposta" ng-value="1" ng-model="pergunta.respostas[$index].nota">
+                        <input ng-change="createCtrl.alterarRadio($index)" type="radio" required name="resposta" ng-value="1" ng-model="createCtrl.form.perguntaTemp.respostas[$index].nota">
                     </label>
-                    <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
+                    <i class="fa fa-trash link iconeResposta" ng-click="createCtrl.removerResposta($index)"></i>
                 </span>
             </div>
         </ul>
@@ -92,7 +109,7 @@
 </div>
 
 <section class="aligned-center">
-    <button ng-click="proximaParte()" ng-if="modalidadeGenerica()">Proxima parte</button>
-    <button ng-click="publicar()" ng-if="!modalidadeGenerica()">Publicar</button>
-    <button ng-click="proximaPergunta()">Próxima pergunta</button>
+    <button ng-click="createCtrl.proximaParte()" ng-if="createCtrl.modalidadeGenerica()">Proxima parte</button>
+    <button ng-click="createCtrl.publicar()" ng-if="!createCtrl.modalidadeGenerica()">Publicar Quiz</button>
+    <button ng-click="createCtrl.proximaPergunta()">Próxima pergunta</button>
 </section>
