--- a/Unico teste real da internet/client/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/client/quizMenu/quizMenu.html
@@ -23,7 +23,7 @@
     <h1 class="title" ng-show="mensagem"> {{mensagem}}
         <h1>
             <div ng-hide="mensagem" class="pagebuttons">
-                <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
-                <a ng-click="proximaPagina()" class="aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
+                <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link fa-pagination"><i class="fa fa-arrow-left fa-pagination-icon" aria-hidden="true"></i> </a>
+                <a ng-click="proximaPagina()" class="aligned-center readmore link fa-pagination"> <i class="fa fa-ellipsis-h fa-pagination-icon" aria-hidden="true"></i> </a>
             </div>
 </div>
