--- a/Unico teste real da internet/client/usuario/perfil.html
+++ b/Unico teste real da internet/client/usuario/perfil.html
@@ -57,7 +57,7 @@
     </div>
     <h1 class="title" ng-if="mensagem"> {{mensagem}} </h1>
     <div ng-if="!mensagem" class="pagebuttons">
-        <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
-        <a ng-click="proximaPagina()" class="aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
+        <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link fa-pagination"><i class="fa fa-arrow-left fa-pagination-icon" aria-hidden="true"></i> </a>
+        <a ng-click="proximaPagina()" class="aligned-center readmore link fa-pagination"> <i class="fa fa-ellipsis-h fa-pagination-icon" aria-hidden="true"></i> </a>
     </div>
 </div>
