--- a/Unico teste real da internet/client/index.html
+++ b/Unico teste real da internet/client/index.html
@@ -75,7 +75,7 @@
 
     <script src='home/home.controller.js'></script>
 
-    <script src='quiz/quiz.controller.js'></script>
+    <script src='quiz/quiz.controller.test.js'></script>
     <script src='quiz/quiz.service.js'></script>
     <script src='quiz/quiz.directive.js'></script>
 
