--- a/Unico teste real da internet/client/usuario/perfil.html
+++ b/Unico teste real da internet/client/usuario/perfil.html
@@ -1,41 +1,44 @@
 <div class="hero page-div">
-    <div class="userDetails">
+    <div class="userDetails aligned-center">
         <article class="hero-body">
             <img ng-src="{{usuario.url_foto}}" class="foto-Edicao img-medium hero-img">
-            <b class="hero-name">{{usuario.nome}}</b>
+            <b class="hero-name aligned-center">{{usuario.nome}}
+                <div ng-if="checarUser()">
+                    <button class="link user-titulodescricao-button" ng-click="editarPerfil()">
+                        <i class="fa fa-pencil"></i>
+                    </button>
+                </div>
+            </b>
         </article>
-
         <div class="user-titulodescricao">
             <p>Sobre mim:</p>
             <article class="user-descricao">
                 <p class="textBox">{{usuario.descricao}}</p>
-                <div ng-if="checarUser()">
-                    <button class="link user-titulodescricao-button" ng-click="editarPerfil()"> <i class="fa fa-pencil"></i></button>
-                    <form class="modal" id="modal">
-                        <div class=" modal-edicao">
-                            <img ng-src="{{usuario.url_foto}}" class="foto-Edicao">
-                            <label>Foto de Perfil:</label>
-                            <input type="text" class= "form-edicao aligned-center" ng-model="usuarioCopia.foto">
-                            <label>Nome: </label>
-                            <input type="text" class="form-edicao aligned-center" ng-model="usuarioCopia.nome">
-                            <label>Descrição:</label>
-                            <textarea type="text" rows="1" cols="30" class="form-edicao aligned-center" ng-model="usuarioCopia.descricao" maxlength="500"></textarea>
-                            <div class="display-buttons">
-                            <button class="botao-edicao salvar"ng-click="atualizarPerfil(); fecharModal();"><i class="fa fa-floppy-o" aria-hidden="true"></i> Salvar Alterações</button>
-                            <button class="botao-edicao"ng-click="fecharModal()"class="link">Cancelar</button>
-                                </div>
+                <form class="modal" id="modal">
+                    <div class=" modal-edicao">
+                        <img ng-src="{{usuario.url_foto}}" class="foto-Edicao">
+                        <label>Foto de Perfil:</label>
+                        <input type="text" class="form-edicao aligned-center" ng-model="usuarioCopia.foto">
+                        <label>Nome: </label>
+                        <input type="text" class="form-edicao aligned-center" ng-model="usuarioCopia.nome">
+                        <label>Descrição:</label>
+                        <textarea type="text" rows="1" cols="30" class="form-edicao aligned-center" ng-model="usuarioCopia.descricao" maxlength="500"></textarea>
+                        <div class="display-buttons">
+                            <button class="botao-edicao-salvar botao-edicao" ng-click="atualizarPerfil(); fecharModal();">Salvar Alterações</button>
+                            <button class="botao-edicao botao-edicao-cancelar" ng-click="fecharModal()" class="link">Cancelar</button>
                         </div>
-                    </form>
-                </div>
-            </article>
-            <div ng-if="!usuario.descricao" class="title">
-                <p ng-if="!checarUser()">
-                    Esse usuário ainda não escreveu nos deu uma descrição
-                </p>
-                <p ng-if="checarUser()">
-                    Você ainda não escreveu sua descrição! Conte ao mundo algo sobre você!
-                </p>
-            </div>
+                    </div>
+                </form>
+        </div>
+        </article>
+        <div ng-if="!usuario.descricao" class="title">
+            <p ng-if="!checarUser()">
+                Esse usuário ainda não escreveu nos deu uma descrição
+            </p>
+            <p ng-if="checarUser()">
+                Você ainda não escreveu sua descrição! Conte ao mundo algo sobre você!
+            </p>
+        </div>
 
         </div>
     </div>
@@ -45,13 +48,22 @@
         <div class="quizzes">
             <section class="quizBox" ng-repeat="quiz in quizzes track by $index">
                 <div>
-                    <p class="quiztitle textBox"> <a ng-href="/#!/quiz/{{quiz.id_quiz}}"> {{quiz.titulo}}      </a></p>
-                    <div class="foto"><a ng-href="/#!/quiz/{{quiz.id_quiz}}"><img ng-src="{{quiz.foto}}"></a></div>
+                    <p class="quiztitle textBox">
+                        <a ng-href="/#!/quiz/{{quiz.id_quiz}}"> {{quiz.titulo}} </a>
+                    </p>
+                    <div class="foto">
+                        <a ng-href="/#!/quiz/{{quiz.id_quiz}}">
+                            <img ng-src="{{quiz.foto}}">
+                        </a>
+                    </div>
                     <p class="resumo"> {{quiz.resumo}} </p>
                 </div>
-                <p ng-if="quiz.modalidade==='generica'" class="modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-                <p ng-if="quiz.modalidade==='pessoal'" class="modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
-                <p ng-if="quiz.modalidade==='pontuacao'" class="modalidade textBox"> <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+                <p ng-if="quiz.modalidade==='generica'" class="modalidade textBox">
+                    <i class="fa fa-random" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+                <p ng-if="quiz.modalidade==='pessoal'" class="modalidade textBox">
+                    <i class="fa fa-user" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+                <p ng-if="quiz.modalidade==='pontuacao'" class="modalidade textBox">
+                    <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
                 <p class="tags">
                     <a ng-repeat="tags in quiz.tags" ng-href="/#!/tag/{{tags}}" class="link">
                         <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
@@ -62,7 +74,11 @@
     </div>
     <h1 class="title" ng-if="mensagem"> {{mensagem}} </h1>
     <div ng-if="!mensagem" class="pagebuttons">
-        <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
-        <a ng-click="proximaPagina()" class="aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
+        <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link">
+            <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        </a>
+        <a ng-click="proximaPagina()" class="aligned-center readmore link">
+            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+        </a>
     </div>
 </div>
