fix nas merdas q eu fiz sem qrer

--- a/Unico teste real da internet/client/criacaoQuiz/parte1.html
+++ b/Unico teste real da internet/client/criacaoQuiz/parte1.html
@@ -1,4 +1,4 @@
-<div class="top-part">
+<div class="seila">
     <div class="pergunta" ng-init="createCtrl.instanciarQuiz()">
         <label class="createL">
             Titulo:
