--- a/Unico teste real da internet/client/index.html
+++ b/Unico teste real da internet/client/index.html
@@ -60,7 +60,7 @@
             </section>
         </article>
         <section class="copyright">
-            2017 TOPTESTES 2000, All rights reserved.
+            2017 QUIZIOTECA, All rights reserved.
         </section>
     </footer>
 
